Editing to correct defunct blog link.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       	indie games. I have even dabbled in PC game development myself, though 
       	none of my projects ever came to fruition. Before this site, I used weebly 
       	to create a site where I reviewed indie games at 
-      	<a href="http://indierun.co">indierun.co</a>, but I stopped posting after
+      	<a href="http://indierun.co.nr">indierun.co.nr</a>, but I stopped posting after
       	a while. After that, I figured I'd base all my future projects on this site.
       	I don't really have a schedule of when I do things, I just sort of code whenever
       	 I have spare time. I hope do learn the wonderful art of creating Twitter bots soon. Stay tuned! Tweet me <a href="http://twitter.com/chromeoverload">@chromeoverload</a>.
