Updating some site information.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <!-- This code was written from scratch by me (unless otherwise indicated). To use any of this code, please request permission from me at chromeoverload@gmail.com. DO NOT USE ANY OF THIS CODE WITHOUT PERMISSION.-->
   
-    <title>ＳＰＡＣＥＭＯＵＳＥ's Portfolio</title>
+    <title>Tareton's Portfolio</title>
     <meta charset="utf-8" />
     <link rel="icon" type="image/jpeg" href="https://pbs.twimg.com/profile_images/577893108433604608/59zZcnK3.jpeg">
     <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
@@ -26,10 +26,10 @@
       
     <h3 class="subheader">|About Me|</h3>
     <p class="outtext">
-        My name is Jared (known online as ＳＰＡＣＥＭＯＵＳＥ), and I am a Dallas high school student with way too much
-      	free time. Besides HTMl coding, my other main interesting are acting and 
+        My name is Jared (sometimes known online as Tareton Thorndike), and I am a Dallas high school student with way too much
+      	free time. Besides HTMl coding, my other main interests are acting and 
       	indie games. I have even dabbled in PC game development myself, though 
-      	none of my projects ever came to fruition. Before this site, I used weebly 
+      	most of my projects never came to fruition. Before this site, I used weebly 
       	to create a site where I reviewed indie games at 
       	<a href="http://indierun.co.nr">indierun.co.nr</a>, but I stopped posting after
       	a while. After that, I figured I'd base all my future projects on this site.
