Updating more site information.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 	<body>
     <div id = "header">
-      <h1>   Chrome|Overload</h1>
+      <h1>Tareton Thorndike's Coding Portfolio</h1>
       <h3>My HTML, CSS, and JS mad laboratory.</h3>
     </div>
     <div id="navbar">
@@ -21,7 +21,7 @@
 			<a id="link3" href="http://chromeoverload.blogspot.com/">Blog</a>
 	</div>
     <p class ="outtext">
-    Welcome to my personal expirements site! This site and all of its contents has been coded from scratch in HTML and CSS by me, Jared, and are hosted using a nifty Google Drive trick. Click on the projects tab above to check out the things I've made, visit my Blog to keep track of my projects as I develop them, or keep reading to learn a little bit more about me!
+    Welcome to my personal expirements site! This site and all of its contents has been coded from scratch in HTML and CSS by me, Jared, and are hosted using Github. Click on the projects tab above to check out the things I've made, visit my Blog to keep track of my projects as I develop them, or keep reading to learn a little bit more about me!
     </p>
       
     <h3 class="subheader">|About Me|</h3>
