--- a/wirezproj.html
+++ b/wirezproj.html
@@ -11,7 +11,7 @@
   </head>
 	<body>
     <div id = "header">
-      <h1>Chrome|Overload</h1>
+      <h1>Tareton Thorndike's Coding Portfolio</h1>
       <h3>My HTML, CSS, and JS mad laboratory.</h3>
     </div>
     <div id="navbar">
@@ -34,7 +34,7 @@
       
       <h3 class="subheader">|How I Made This Game|</h3>
       <p class="outtext">
-		I made this game using the full version of Gamemaker 8.1. I drew all the pixel art myself using Gamemaker's in-house drawing software, which I find to be quite intuitive.
+		I made this game using the full version of Gamemaker 8.1 (defunct; this software is now known as Gamemaker Studio). I drew all the pixel art myself using Gamemaker's in-house drawing software, which I find to be quite intuitive.
       </p>
       
 	</body>
