--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
   <head>
     <!-- This code was written from scratch by me (unless otherwise indicated). To use any of this code, please request permission from me at chromeoverload@gmail.com. DO NOT USE ANY OF THIS CODE WITHOUT PERMISSION.-->
  
-    <title>ＳＰＡＣＥＭＯＵＳＥ's Projects</title>
+    <title>Tareton's Projects</title>
     <meta charset="utf-8" />
     <link rel="icon" type="image/jpeg" href="https://pbs.twimg.com/profile_images/577893108433604608/59zZcnK3.jpeg">
     <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
