--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
   </head>
 	<body>
     <div id = "header">
-      <h1>Chrome|Overload</h1>
+      <h1>Tareton Thorndike's Coding Portfolio</h1>
       <h3>My HTML, CSS, and JS mad laboratory.</h3>
     </div>
     <div id="navbar">
