--- a/websiteproj.html
+++ b/websiteproj.html
@@ -11,7 +11,7 @@
   </head>
 	<body>
     <div id = "header">
-      <h1>Chrome|Overload</h1>
+      <h1>Tareton Thorndike's Coding Portfolio</h1>
       <h3>My HTML, CSS, and JS mad laboratory.</h3>
     </div>
     <div id="navbar">
@@ -24,7 +24,7 @@
       <p class="outtext">
         This site was coded completely from scratch. When I initially started, I knew that 
         I wanted to be able to edit it from any device, have it sync automatically with cloud 
-        storage, and not have to pay any money to do either. For my storage method, I chose 
+        storage, and not have to pay any money to do either. For my storage method, I originally chose 
         Google Drive (as I am a heavy Google user). Next, I needed a method to host websites on 
         Google Drive. Turns out that a man named Amit Agarwal wrote a niftly little Google 
         Script (tutorial <a href="http://www.labnol.org/internet/host-website-on-google-drive/28178/">here</a>) 
@@ -32,7 +32,10 @@
         files, and then creates a public folder in your Drive containing those files. It 
         then generates a web link using the folder name, and gives that link to you. I had 
         already used the free subdomain redirection service co.nr, so I linked chromeoverload.co.nr 
-        to the Google Drive website link. Done!
+        to the Google Drive website link.
+	<br>
+	<br>
+	However, a few years later I noticed that the Google Drive hosting trick had become defunct, and the links no longer worked. Thus, I decided to move everything to Github and edit it all online from Github itself. Thus, the site in its current iteration was created.
       </p>
       
       <img class="screenshot" src="site.png" alt="Early Site Screencap" width="843" height="539">
@@ -40,7 +43,7 @@
       
       <h3 class="subheader">|How I Edit This Site|</h3>
       <p class="outtext">
-        To edit this site, I wanted to use a cross-platform IDE that I could load from 
+        To edit this site, I had originally wanted to use a cross-platform IDE that I could load from 
         any device. As a Google user, I looked toward Chrome-based IDEs, specifically ones 
         on the Chrome Web Store. I chose the IDE <a href="https://chrome.google.com/webstore/detail/puresolid-ide/ndhdjddnbbjnojdjbglbpenimlpnlpbl?hl=en-US">Puresolid IDE</a> 
         because it had the best autcomplete, text highlighting, and overall interface. I can install this 
@@ -48,6 +51,9 @@
         could use from even my mobile devices. I found 
         <a href="http://editey.com/">Editey</a>, a Drive App/browser based editor that 
         runs fairly smoothly on my iPad. And with that, I was set!
+	<br>
+	<br>
+	However, since Github has its own built-in online IDE/coding interface, I just everything there now.
       </p>
 	</body>
 </html>
