--- a/websiteproj.html
+++ b/websiteproj.html
@@ -35,7 +35,9 @@
         to the Google Drive website link.
 	<br>
 	<br>
-	However, a few years later I noticed that the Google Drive hosting trick had become defunct, and the links no longer worked. Thus, I decided to move everything to Github and edit it all online from Github itself. Thus, the site in its current iteration was created.
+	However, a few years later I noticed that the Google Drive hosting trick had become defunct, and the 
+	links no longer worked. Thus, I decided to move everything to Github and edit it all online from 
+	Github itself. Thus, the site in its current iteration was created.
       </p>
       
       <img class="screenshot" src="site.png" alt="Early Site Screencap" width="843" height="539">
@@ -53,7 +55,7 @@
         runs fairly smoothly on my iPad. And with that, I was set!
 	<br>
 	<br>
-	However, since Github has its own built-in online IDE/coding interface, I just everything there now.
+	However, since Github has its own built-in online IDE/coding interface, I just code everything there now.
       </p>
 	</body>
 </html>
