Updated some information and new links.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
       	<a href="http://indierun.co.nr">indierun.co.nr</a>, but I stopped posting after
       	a while. After that, I figured I'd base all my future projects on this site.
       	I don't really have a schedule of when I do things, I just sort of code whenever
-      	 I have spare time. I hope do learn the wonderful art of creating Twitter bots soon. Stay tuned! Tweet me <a href="http://twitter.com/chromeoverload">@chromeoverload</a>.
-        Business inquiries: <a href="mailto:chromeoverload@gmail.com">chromeoverload@gmail.com</a>.
+      	 I have spare time. I hope do learn the wonderful art of creating Twitter bots soon. Tweet me <a href="http://twitter.com/chromeoverload">@chromeoverload</a>.
+        Business inquiries: <a href="mailto:chromeoverload@gmail.com">chromeoverload@gmail.com</a>. I also have a <a href="http://beepsandbeats.tumblr.com/">Tumblr</a> 
+	and a <a href="https://soundcloud.com/beeps-beats">Soundcloud</a> that I post to about art and music sometimes. Stay tuned!
     </p>
 		
 	</body>
