Adding info about Coolors.

--- a/websiteproj.html
+++ b/websiteproj.html
@@ -22,7 +22,9 @@
       <h3 class="subheader">|This Site|</h3>
       
       <p class="outtext">
-        This site was coded completely from scratch. When I initially started, I knew that 
+        This site was coded completely from scratch. To create the color scheme for this site, I used the 
+	awesome color palette generator at <a href="https://coolors.co/565264-cbf7ed-fcf7f8-808d8e-706677">Coolors.co</a>. 
+	When I initially started, I knew that 
         I wanted to be able to edit it from any device, have it sync automatically with cloud 
         storage, and not have to pay any money to do either. For my storage method, I originally chose 
         Google Drive (as I am a heavy Google user). Next, I needed a method to host websites on 
