--- a/websiteproj.html
+++ b/websiteproj.html
@@ -22,7 +22,7 @@
       <h3 class="subheader">|This Site|</h3>
       
       <p class="outtext">
-        This site was coded completely from scratch. To create the color scheme for this site, I used the 
+        This site was coded completely from scratch. To create the color scheme for it, I used the 
 	awesome color palette generator at <a href="https://coolors.co/565264-cbf7ed-fcf7f8-808d8e-706677">Coolors.co</a>. 
 	When I initially started, I knew that 
         I wanted to be able to edit it from any device, have it sync automatically with cloud 
