--- a/spacefish.html
+++ b/spacefish.html
@@ -3,7 +3,7 @@
   <head>
     <title>GrandMaster Koi</title>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/jpeg" href="https://pbs.twimg.com/profile_images/577893108433604608/59zZcnK3.jpeg">
+    <link rel="icon" type="image/jpeg" href="icon.jpg">
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
