--- a/cardproj.html
+++ b/cardproj.html
@@ -4,7 +4,7 @@
  
     <title>Jared's Web Experiments</title>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/jpeg" href="https://pbs.twimg.com/profile_images/577893108433604608/59zZcnK3.jpeg">
+    <link rel="icon" type="image/jpeg" href="icon.jpg">
     <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
