--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     Welcome to my personal expirements site! This site and all of its contents has been coded from scratch in HTML and CSS by me, Jared, and are hosted using Github. Click on the projects tab above to check out the things I've made, visit my Blog to keep track of my projects as I develop them, or keep reading to learn a little bit more about me!
     </p>
       
-    <h3 class="subheader">|About Me|</h3>
+    <h3 class="subheader">About Me</h3>
     <p class="outtext">
         My name is Jared (sometimes known online as Tareton Thorndike), and I am a Dallas high school student with way too much
       	free time. Besides HTMl coding, my other main interests are acting and 
