--- a/wirezproj.html
+++ b/wirezproj.html
@@ -20,7 +20,7 @@
 			<a id="link3" href="http://chromeoverload.blogspot.com/">Blog</a>
 	</div>
       
-      <h3 class="subheader"><a href="BluewirezAlpha0.5.zip">Click Here to Download the Game</a></h3>
+      <h3 class="sublink"><a href="BluewirezAlpha0.5.zip">Click Here to Download the Game</a></h3>
       <iframe src="//itch.io/embed/20901?dark=true&linkback=true" width="552" height="167" frameborder="0"></iframe>
       
       <h3 class="subheader">|About This Game|</h3>
