--- a/websiteproj.html
+++ b/websiteproj.html
@@ -19,7 +19,7 @@
 			<a id="link2" href="projects.html">Projects</a>
 			<a id="link3" href="http://chromeoverload.blogspot.com/">Blog</a>
 	</div>
-      <h3 class="subheader">|This Site|</h3>
+      <h3 class="subheader">This Site</h3>
       
       <p class="outtext">
         This site was coded completely from scratch. To create the color scheme for it, I used the 
@@ -45,7 +45,7 @@
       <img class="screenshot" src="site.png" alt="Early Site Screencap" width="843" height="539">
       <p class="caption">An early screenshot of the homepage with its original "vintage red" CSS style.</p>
       
-      <h3 class="subheader">|How I Edit This Site|</h3>
+      <h3 class="subheader">How I Edit This Site</h3>
       <p class="outtext">
         To edit this site, I had originally wanted to use a cross-platform IDE that I could load from 
         any device. As a Google user, I looked toward Chrome-based IDEs, specifically ones 
