--- a/fishproj.html
+++ b/fishproj.html
@@ -22,7 +22,7 @@
       
       <h3 class="subheader"><a class = "headlink" href="spacefish.html">Click Here to Get Some Great Advice!</a></h3>
       
-      <h3 class="subheader">|About This Thing|</h3>
+      <h3 class="subheader">About This Thing</h3>
       <p class="outtext">
            Grandmaster Koi is a randomly-colored fish that gives (supposedly) good advice in a garbled-up alien language. His colors and advice are randomly generated using Javascript. Any real words or phrases he generates are by pure chance. There is no point, and no end to the possibilities. Go crazy. *NOTE* since the colors are all random, things can sometimes be hard to see. Sorry.
       </p>
