--- a/fishproj.html
+++ b/fishproj.html
@@ -29,7 +29,7 @@
       </p>
       
       <img class="screenshot" src="fishcap.png" alt="Koi Screencap" width="783" height="469">
-      <p class="caption">A screencap of some of the Grandmaster's great advice.</p>
+      <p class="caption">A screenshot of some of the Grandmaster's great advice.</p>
       
 	</body>
 </html>
