--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 			<a id="link3" href="http://chromeoverload.blogspot.com/">Blog</a>
 	</div>
     <p class ="outtext">
-    Welcome to my personal expirements site! This site and all of its contents has been coded from scratch in HTML and CSS by me, Jared, and are hosted using Github. Click on the projects tab above to check out the things I've made, visit my Blog to keep track of my projects as I develop them, or keep reading to learn a little bit more about me!
+    Welcome to my personal expirements site! This site and all of its contents has been coded from scratch in HTML and CSS by 
+    me, Jared, and are hosted using Github. Click on the projects tab above to check out the things I've made, visit my Blog 
+    to keep track of my projects as I develop them, or keep reading to learn a little bit more about me!
     </p>
       
     <h3 class="subheader">About Me</h3>
@@ -34,9 +36,12 @@
       	<a href="http://indierun.co.nr">indierun.co.nr</a>, but I stopped posting after
       	a while. After that, I figured I'd base all my future projects on this site.
       	I don't really have a schedule of when I do things, I just sort of code whenever
-      	 I have spare time. I hope do learn the wonderful art of creating Twitter bots soon. Tweet me <a href="http://twitter.com/chromeoverload">@chromeoverload</a>.
-        Business inquiries: <a href="mailto:chromeoverload@gmail.com">chromeoverload@gmail.com</a>. I also have a <a href="http://beepsandbeats.tumblr.com/">Tumblr</a> 
-	and a <a href="https://soundcloud.com/beeps-beats">Soundcloud</a> that I post to about art and music sometimes. Stay tuned!
+      	 I have spare time. I hope to learn the wonderful art of creating Twitter bots soon. 
+	    Tweet me <a href="http://twitter.com/chromeoverload">@chromeoverload</a>, send me 
+	    business inquiries at <a href="mailto:chromeoverload@gmail.com">chromeoverload@gmail.com</a>, 
+	    and follow me at <a href="https://chromeoverload.itch.io/">Itch.io</a>. I also have a 
+	    <a href="http://beepsandbeats.tumblr.com/">Tumblr</a> and a <a href="https://soundcloud.com/beeps-beats">Soundcloud</a> 
+	    that I post to about art and music sometimes. Stay tuned!
     </p>
 		
 	</body>
