--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <p class="outtext">
         My name is Jared (sometimes known online as Tareton Thorndike), and I am a Dallas high school student with way too much
       	free time. Besides HTMl coding, my other main interests are acting and 
-      	indie games. I have even dabbled in PC game development myself, though 
-      	most of my projects never came to fruition. Before this site, I used weebly 
+      	obscure/indedepent games. I have even dabbled in game development myself, though 
+      	most of my projects never came to fruition. Before this site, I used Weebly 
       	to create a site where I reviewed indie games at 
       	<a href="http://indierun.co.nr">indierun.co.nr</a>, but I stopped posting after
       	a while. After that, I figured I'd base all my future projects on this site.
