--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
       
     <div class="project">
         <h3><a href="wirezproj.html">Bluewirez Alpha (Incomplete)</a></h3>
-        <p>A sort-of electricity simulator thing.</p>
+        <p>A weird sort-of electricity simulator thing.</p>
         <img id="wirezlogo"src="bluewirez1.png" alt="Screenshot" align="right" width="64" height="48">
     </div>
       
