--- a/gameoflife.html
+++ b/gameoflife.html
@@ -15,7 +15,21 @@
   
   
   <script>
-  
+	  var worldsize = 5;
+	  var gridCurrent = new Array(worldsize);
+	  
+	  for (i=0; i<worldsize; i++)
+	  {
+		  faq[i]=new Array(worldsize);
+	  }
+	  
+	  var gridNext = new Array(worldsize);
+	  
+	  for (i=0; i<worldsize; i++)
+	  {
+		  faq[i]=new Array(worldsize);
+	  }
+	  
   </script>
   </body>
   </html>
