--- a/gameoflife.html
+++ b/gameoflife.html
@@ -16,18 +16,17 @@
   
   <script>
 	  var worldsize = 5;
-	  var gridCurrent = new Array(worldsize);
 	  
+	  var gridCurrent = new Array(worldsize);
 	  for (i=0; i<worldsize; i++)
 	  {
-		  faq[i]=new Array(worldsize);
+		  gridCurrent[i]=new Array(worldsize);
 	  }
 	  
 	  var gridNext = new Array(worldsize);
-	  
 	  for (i=0; i<worldsize; i++)
 	  {
-		  faq[i]=new Array(worldsize);
+		  gridCurrent[i]=new Array(worldsize);
 	  }
 	  
   </script>
