--- a/gameoflife.html
+++ b/gameoflife.html
@@ -29,6 +29,10 @@
 		  gridCurrent[i]=new Array(worldsize);
 	  }
 	  
+	  function spawnGrid()
+	  {
+	  	
+	  }
   </script>
   </body>
   </html>
