--- a/gameoflife.html
+++ b/gameoflife.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -18,6 +19,7 @@
 	  var worldsize = 5;
 	  
 	  var gridCurrent = new Array(worldsize);
+	  var i;
 	  for (i=0; i<worldsize; i++)
 	  {
 		  gridCurrent[i]=new Array(worldsize);
@@ -31,9 +33,22 @@
 	  
 	  function spawnGrid()
 	  {
-	  	
+		var row;
+		var col;
+	  	for(row = 0; row<worldsize; row++)
+		{
+			for(col = 0; col<worldsize; col++)
+			{
+				
+			}
+		}
 	  }
   </script>
+	
+		
+	<style>
+		
+	</style>
   </body>
   </html>
   
