--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h3 class="subheader">About Me</h3>
     <p class="outtext">
         My name is Jared (sometimes known online as Tareton Thorndike), and I am a Dallas high school student with way too much
-      	free time. Besides HTMl coding, my other main interests are acting and 
+      	free time. Besides HTML coding, my other main interests are acting and 
       	obscure/indedepent games. I have even dabbled in game development myself, though 
       	most of my projects never came to fruition. Before this site, I used Weebly 
       	to create a site where I reviewed indie games at 
