--- a/gameoflife.html
+++ b/gameoflife.html
@@ -60,11 +60,11 @@
 			{
 				if(gridCurrent[row][col])
 				{
-					grid += "■";
+					grid += "█";
 				}
 				else
 				{
-					grid += "  ";
+					grid += "░";
 				}
 			}
 			grid += "<br/>";
