--- a/gameoflife.html
+++ b/gameoflife.html
@@ -75,8 +75,6 @@
 	  
 	  function runSim()
 	  {
-		while(true) //numSteps > 0
-        	{
 			var row;
 			var col;
             for(row = 0;row<worldSize;row++)
@@ -152,7 +150,7 @@
                     }
                 }
             printGrid();
-        }  
+		setTimeout(runSim,1000);
 	  }
 	  
 	  spawnGrid();
