--- a/gameoflife.html
+++ b/gameoflife.html
@@ -159,8 +159,8 @@
 	  
 	  spawnGrid();
 	  printGrid();
-	  spawnGrid();
-	  //printGrid();
+	  //spawnGrid();
+	  printGrid();
 	  //runSim();
   </script>
 	
