--- a/gameoflife.html
+++ b/gameoflife.html
@@ -145,9 +145,9 @@
             }
             }
             
-            for(int rowS=0;rowS<worldSize;rowS++)
+            for(rowS=0;rowS<worldSize;rowS++)
                 {
-                for(int colS=0;colS<worldSize;colS++)
+                for(colS=0;colS<worldSize;colS++)
                     {
                         gridCurrent[rowS][colS] = gridNext[rowS][colS];
                     }
