--- a/gameoflife.html
+++ b/gameoflife.html
@@ -47,7 +47,7 @@
 				gridCurrent[row][col] = ((Math.floor(rand*2)) == 1);
 			}
 		}
-		printGrid();
+		//printGrid();
 	  }
 	  
 	  function printGrid()
@@ -152,8 +152,8 @@
                         gridCurrent[rowS][colS] = gridNext[rowS][colS];
                     }
                 }
-		  printGrid();
-		setTimeout(runSim,1000);
+		//printGrid();
+		//setTimeout(runSim,1000);
 	  }
 	  
 	  
