--- a/gameoflife.html
+++ b/gameoflife.html
@@ -148,6 +148,7 @@
 				  gridCurrent[rowS][colS] = gridNext[rowS][colS];
 			  }
 		  }
+		  spawnGrid();
 		  printGrid();
 		  //setTimeout(runSim,1000);
 	  }
