--- a/gameoflife.html
+++ b/gameoflife.html
@@ -137,7 +137,7 @@
 				  }
 				  else
 				  {
-					  gridNext[rowS][colS] = Boolean(liveNeighbors == 3);
+					  gridNext[rowS][colS] = 0;  //Boolean(liveNeighbors == 3);
 				  }
 			  }
 		  }
