--- a/gameoflife.html
+++ b/gameoflife.html
@@ -148,7 +148,7 @@
 				  gridCurrent[rowS][colS] = gridNext[rowS][colS];
 			  }
 		  }
-		  spawnGrid();
+		  //spawnGrid();
 		  printGrid();
 		  //setTimeout(runSim,1000);
 	  }
