--- a/gameoflife.html
+++ b/gameoflife.html
@@ -164,7 +164,8 @@
           }
 	  
 	  spawnGrid();
-	  //printGrid();
+	  gridCurrent[1][1] = true;
+	  printGrid();
 	  //runSim();
   </script>
 	
