--- a/gameoflife.html
+++ b/gameoflife.html
@@ -33,8 +33,8 @@
 		  gridCurrent[i]=new Array(worldSize);
 	  }
 	  
-	  function spawnGrid()
-	  {
+	  //function spawnGrid()
+	  //{
 		var row;
 		var col;
 	  	for(row = 0; row<worldSize; row++)
@@ -47,7 +47,7 @@
 			}
 		}
 		printGrid();
-	  }
+	  //}
 	  
 	  function printGrid()
 	  {
@@ -163,9 +163,9 @@
           }
           }
 	  
-	  spawnGrid();
-	  gridCurrent[1][1] = true;
-	  printGrid();
+	  //spawnGrid();
+	  //gridCurrent[1][1] = true;
+	  //printGrid();
 	  //runSim();
   </script>
 	
