--- a/gameoflife.html
+++ b/gameoflife.html
@@ -30,7 +30,7 @@
 	  var gridNext = new Array(worldSize);
 	  for (i=0; i<worldSize; i++)
 	  {
-		  gridCurrent[i]=new Array(worldSize);
+		  gridNext[i]=new Array(worldSize);
 	  }
 	  
 	  function spawnGrid()
