--- a/gameoflife.html
+++ b/gameoflife.html
@@ -150,7 +150,7 @@
 		  }
 		  //spawnGrid();
 		  printGrid();
-		  //setTimeout(runSim,1000);
+		  setTimeout(runSim,1000);
 	  }
 	  
 	  window.onload = function() {
