--- a/gameoflife.html
+++ b/gameoflife.html
@@ -60,11 +60,11 @@
 			{
 				if(gridCurrent[row][col])
 				{
-					grid += "⬛"; //█
+					grid += "█"; //⬛
 				}
 				else
 				{
-					grid += "⬜"; //░
+					grid += "░"; //⬜
 				}
 			}
 			grid += "<br/>";
@@ -171,7 +171,7 @@
 	
 		
 	<style>
-		#p{text-align:center;font-family: 'Lucida Console';font-weight: bold;font-size:12px}	
+		#p{text-align:center;font-family: 'Lucida Console';font-weight: bold;font-size:10px}	
 	</style>
   </body>
   </html>
