--- a/gameoflife.html
+++ b/gameoflife.html
@@ -171,7 +171,7 @@
 	
 		
 	<style>
-		#p{text-align:center;font-family: 'Lucida Console';font-weight: bold;font-size:10px;line-height:0.5em}	
+		#p{text-align:center;font-family: 'Lucida Console';font-weight: bold;font-size:10px;line-height:5px}	
 	</style>
   </body>
   </html>
