--- a/gameoflife.html
+++ b/gameoflife.html
@@ -13,9 +13,9 @@
   </head>
 	<body>
   
-		<span id="p">
+		<h4 id="p">
       
-    		</span>
+    		</h4>
 		<h7><a id = "mylink" href="#">Click here to recolor the Grandmaster (and get more great advice)</a></h7>
   <script>
 	  var worldSize = 50;
@@ -171,7 +171,7 @@
 	
 		
 	<style>
-		#p{text-align:center;font-family: 'Lucida Console';font-weight: bold;font-size:10px} /*line-height:5px*/
+		#p{text-align:center;font-family: 'Lucida Console';font-weight: bold;} /*font-size:10px;line-height:5px*/
 	</style>
   </body>
   </html>
