--- a/gameoflife.html
+++ b/gameoflife.html
@@ -16,7 +16,7 @@
 		<h4 id="p">
       
     		</h4>
-		<h7><a id = "mylink" href="#">Click here to recolor the Grandmaster (and get more great advice)</a></h7>
+		<button id="mylink">Click here to recolor the Grandmaster (and get more great advice)</button>
   <script>
 	  var worldSize = 50;
 	  
