--- a/gameoflife.html
+++ b/gameoflife.html
@@ -16,9 +16,10 @@
 		<h4 id="p">
       
     		</h4>
-		<button id="mylink">Click here to recolor the Grandmaster (and get more great advice)</button>
+		<button id="mylink" onclick="running = true;">Click here to recolor the Grandmaster (and get more great advice)</button>
   <script>
 	  var worldSize = 50;
+	  var running = false;
 	  
 	  var gridCurrent = new Array(worldSize);
 	  var i;
@@ -158,12 +159,17 @@
           var a = document.getElementById("mylink");
           
           a.onclick = function() {
-		  runSim();
+		  //runSim();
 		  return false;
           }
           }
 	  
 	  spawnGrid();
+	  if(running)
+	  {
+		runSim();  
+	  }
+	  
 	  //gridCurrent[1][1] = true;
 	  //printGrid();
 	  //runSim();
