--- a/gameoflife.html
+++ b/gameoflife.html
@@ -19,7 +19,7 @@
 		<button id="mylink">Click here to recolor the Grandmaster (and get more great advice)</button>
   <script>
 	  var worldSize = 50;
-	  var running = false;
+	  var running = true;
 	  var speed = 100;
 	  
 	  var gridCurrent = new Array(worldSize);
