--- a/gameoflife.html
+++ b/gameoflife.html
@@ -187,7 +187,8 @@
           }
           }
 	  
-	  spawnGrid();	  
+	  spawnGrid();
+	  step();
 	  //gridCurrent[1][1] = true;
 	  //printGrid();
 	  //runSim();
