--- a/gameoflife.html
+++ b/gameoflife.html
@@ -16,7 +16,7 @@
 		<h3 id="p">
       
     		</h3>
-		<button id="mylink">Click here to recolor the Grandmaster (and get more great advice)</button>
+		<button id="start" onclick="toggleRun">Start/Stop</button>
   <script>
 	  var worldSize = 50;
 	  var running = true;
