--- a/gameoflife.html
+++ b/gameoflife.html
@@ -43,7 +43,7 @@
 	  		}
 		  
 		  printGrid();
-		  setTimeout(step,Math.pow(100,speed));
+		  setTimeout(step,100*Math.pow(5,speed));
 	  }
 	  
 	  function toggleRun()
