--- a/gameoflife.html
+++ b/gameoflife.html
@@ -188,7 +188,7 @@
           var a = document.getElementById("mylink");
           
           a.onclick = function() {
-		  //toggleRun();
+		  toggleRun();
 		  return false;
           }
           }
