--- a/gameoflife.html
+++ b/gameoflife.html
@@ -17,7 +17,7 @@
       
     		</h3>
 		<button id="start" onclick="toggleRun()">Start/Stop</button>
-		<button id="start" onclick="changedSpeed(10)">></button>
+		<button id="start" onclick="changeSpeed(10)">></button>
   <script>
 	  var worldSize = 50;
 	  var running = true;
@@ -188,7 +188,7 @@
           var a = document.getElementById("mylink");
           
           a.onclick = function() {
-		  toggleRun();
+		  //toggleRun();
 		  return false;
           }
           }
