--- a/gameoflife.html
+++ b/gameoflife.html
@@ -36,7 +36,7 @@
 		  gridNext[i]=new Array(worldSize);
 	  }
 	  
-	  function changeSpeed(var increment)
+	  function changeSpeed(increment)
 	  {
 		speed += increment;  
 	  }
