--- a/gameoflife.html
+++ b/gameoflife.html
@@ -17,7 +17,8 @@
       
     		</h3>
 		<button id="start" onclick="toggleRun()">Start/Stop</button>
-		<button id="start" onclick="changeSpeed(10)">></button>
+		<button id="start" onclick="changeSpeed(20)">&#60;</button>
+		<button id="start" onclick="changeSpeed(-20)">></button>
   <script>
 	  var worldSize = 50;
 	  var running = true;
