--- a/gameoflife.html
+++ b/gameoflife.html
@@ -16,10 +16,11 @@
 		<h3 id="p">
       
     		</h3>
-		<button id="start" onclick="toggleRun()">Start/Stop</button>
-		<button id="start" onclick="changeSpeed(20)">&#60;</button>
-		<button id="start" onclick="changeSpeed(-20)">></button>
-		<button id="start" onclick="clearGrid()">></button>
+		<button id="button" onclick="toggleRun()">Start/Stop</button>
+		<button id="button" onclick="changeSpeed(20)">&#60;</button>
+		<button id="button" onclick="changeSpeed(-20)">></button>
+		<button id="button" onclick="clearGrid()">Clear Grid</button>
+		<button id="button" onclick="spawnGrid()">Randomize Grid</button>
   <script>
 	  var worldSize = 50;
 	  var running = true;
@@ -46,7 +47,7 @@
 		{
 			for(col = 0; col<worldSize; col++)
 			{
-				gridCurrent[row][col] = true;
+				gridCurrent[row][col] = false;
 			}
 		}
 	  }
