--- a/gameoflife.html
+++ b/gameoflife.html
@@ -23,7 +23,7 @@
 		<button id="button" onclick="spawnGrid()">Randomize Grid</button>
   <script>
 	  var worldSize = 50;
-	  var running = true;
+	  var running = false;
 	  var speed = 100;
 	  
 	  var gridCurrent = new Array(worldSize);
