--- a/gameoflife.html
+++ b/gameoflife.html
@@ -42,7 +42,7 @@
 	  
 	  function changeSize()
 	  {
-		  worldsize++;
+		  worldSize++;
 		  var gridNext = new Array(worldSize);
 	  	  	for (i=0; i<worldSize; i++)
 	    		{
