--- a/gameoflife.html
+++ b/gameoflife.html
@@ -12,12 +12,14 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   </head>
 	<body>
+		<div id="buttons">
 		<button id="button" onclick="toggleRun()">Start/Stop</button>
 		<button id="button" onclick="changeSpeed(20)">&#60;</button>
 		<button id="button" onclick="changeSpeed(-20)">></button>
 		<button id="button" onclick="clearGrid()">Clear Grid</button>
 		<button id="button" onclick="spawnGrid()">Randomize Grid</button>
 		<button id="button" onclick="changeSize()">Size</button>
+		</div>
 		
 		<h3 id="p">
       
@@ -243,6 +245,7 @@
 		
 	<style>
 		#p{text-align:center;font-family: 'Lucida Console';font-weight: bold;font-size:50%} /*font-size:10px;line-height:5px*/
+		#buttons{display:block; margin:auto}
 	</style>
   </body>
   </html>
