--- a/gameoflife.html
+++ b/gameoflife.html
@@ -12,7 +12,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   </head>
 	<body>
-		<div id="buttons">
+		<div id="buttons" align="middle">
 		<button id="button" onclick="toggleRun()">Start/Stop</button>
 		<button id="button" onclick="changeSpeed(20)">&#60;</button>
 		<button id="button" onclick="changeSpeed(-20)">></button>
