--- a/gameoflife.html
+++ b/gameoflife.html
@@ -245,7 +245,7 @@
 		
 	<style>
 		#p{text-align:center;font-family: 'Lucida Console';font-weight: bold;font-size:50%} /*font-size:10px;line-height:5px*/
-		#buttons{display:block; margin:auto}
+		/*#buttons{display:block; margin:auto}*/
 	</style>
   </body>
   </html>
