--- a/templated/index.html
+++ b/templated/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Epilogue by TEMPLATED</title>
+		<title>Jared's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,9 +41,9 @@
 						<article class="item">
 							<header>
 								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
-								<h3>Feugiat et faucibus</h3>
+								<h3>Film</h3>
 							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
+							<p>All of my various work in film classes and on film projects.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
@@ -51,9 +51,9 @@
 						<article class="item">
 							<header>
 								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
-								<h3>Blandit adipiscing</h3>
+								<h3>HOTF</h3>
 							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
+							<p>My work managing, experimenting with, and developing algorithms for an online cooperative politics sim.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
