Testing new images.

--- a/templated/index.html
+++ b/templated/index.html
@@ -40,7 +40,7 @@
 					<section class="main items">
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#"><img src="images/bluewirez1.png" alt="" /></a>
 								<h3>Film</h3>
 							</header>
 							<p>All of my various work in film classes and on film projects.</p>
