--- a/templated/index.html
+++ b/templated/index.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="inner">
-					<h1>Epilogue</h1>
-					<p>A free responsive site template by <a href="https://templated.co">TEMPLATED</a></p>
+					<h1>My Portfolio</h1>
+					<p>Some opening quip</p>
 				</div>
 			</header>
 
@@ -27,12 +27,10 @@
 				<!-- Banner -->
 					<section id="intro" class="main">
 						<span class="icon fa-diamond major"></span>
-						<h2>Magna porta maximus</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae<br />
-						malesuada turpis. Nam pellentesque in ac aliquam. Aliquam tempor<br />
-						mi porta egestas maximus lorem ipsum dolor.</p>
+						<h2>Hi There!</h2>
+						<p>I am blah blah blah.</p>
 						<ul class="actions">
-							<li><a href="#" class="button big">Learn More</a></li>
+							<li><a href="#" class="button big">More About Me</a></li>
 						</ul>
 					</section>
 
@@ -61,19 +59,19 @@
 						<article class="item">
 							<header>
 								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
-								<h3>Lorem massa nulla</h3>
+								<h3>Web Development</h3>
 							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
+							<p>My work exploring various different website and blogging platforms.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
-								<h3>Ipsum sed tempus</h3>
+								<a href="#"><img src="images/bluewirez1.jpg" alt="" /></a>
+								<h3>Game Development & Miscellaneous Code Projects</h3>
 							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
+							<p>Something.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
