--- a/templated/index.html
+++ b/templated/index.html
@@ -61,14 +61,14 @@
 								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
 								<h3>Web Development</h3>
 							</header>
-							<p>My work exploring various different website and blogging platforms.</p>
+							<p>My work exploring different website and blogging platforms.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/bluewirez1.jpg" alt="" /></a>
+								<a href="#"><img src="images/bluewirez1.png" alt="" /></a>
 								<h3>Game Development & Miscellaneous Code Projects</h3>
 							</header>
 							<p>Something.</p>
