--- a/templated/index.html
+++ b/templated/index.html
@@ -38,7 +38,7 @@
 					<section class="main items">
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/bluewirez1.png" alt="" /></a>
+								<a href="#"><img src="images/twosides.jpg" alt="" /></a>
 								<h3>Film</h3>
 							</header>
 							<p>All of my various work in film classes and on film projects.</p>
