--- a/templated/index.html
+++ b/templated/index.html
@@ -48,7 +48,7 @@
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#"><img src="images/hotfmap.png" alt="" /></a>
 								<h3>HOTF</h3>
 							</header>
 							<p>My work managing, experimenting with, and developing algorithms for an online cooperative politics sim.</p>
