--- a/templated/index.html
+++ b/templated/index.html
@@ -58,7 +58,7 @@
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#"><img src="images/indierun.png" alt="" /></a>
 								<h3>Web Development</h3>
 							</header>
 							<p>My work exploring different website and blogging platforms.</p>
