--- a/templated/index.html
+++ b/templated/index.html
@@ -26,7 +26,7 @@
 
 				<!-- Banner -->
 					<section id="intro" class="main">
-						<span class="icon fa-diamond major"></span>
+						<span class="icon fa-code major"></span>
 						<h2>Hi There!</h2>
 						<p>I am blah blah blah.</p>
 						<ul class="actions">
