--- a/templated/index.html
+++ b/templated/index.html
@@ -111,7 +111,7 @@
 							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>-->
 							<li><a href="mailto:chromeoverload@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.</p>
+						<p class="copyright">&copy; Jared Butler, 2017. Design: <a href="https://templated.co">TEMPLATED</a>. <!--Images: <a href="https://unsplash.com">Unsplash</a>.--></p>
 					</footer>
 
 			</div>
