--- a/templated/index.html
+++ b/templated/index.html
@@ -17,7 +17,7 @@
 			<header id="header" class="alt">
 				<div class="inner">
 					<h1>My Portfolio</h1>
-					<p>Some opening quip</p>
+					<p>My personal assortment of random experiments and obscure interests</p>
 				</div>
 			</header>
 
@@ -28,7 +28,7 @@
 					<section id="intro" class="main">
 						<span class="icon fa-code major"></span>
 						<h2>Hi There!</h2>
-						<p>I am blah blah blah.</p>
+						<p>I'm Jared, a Dallas high school student with a love for stage & film, games, and procedural generation.</p>
 						<ul class="actions">
 							<li><a href="#" class="button big">More About Me</a></li>
 						</ul>
@@ -71,7 +71,7 @@
 								<a href="#"><img src="images/bluewirez1.png" alt="" /></a>
 								<h3>Game Development & Miscellaneous Code Projects</h3>
 							</header>
-							<p>Something.</p>
+							<p>A grab bag of art, unfinished games, and Javascript experiments.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
