--- a/templated/index.html
+++ b/templated/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="inner">
-					<h1>My Portfolio</h1>
+					<h1>Jared's Portfolio</h1>
 					<p>My personal assortment of random experiments and obscure interests</p>
 				</div>
 			</header>
