--- a/templated/index.html
+++ b/templated/index.html
@@ -48,12 +48,12 @@
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/hotfmap.png" alt="" /></a>
+								<a href="hotf.html"><img src="images/hotfmap.png" alt="" /></a>
 								<h3>HOTF</h3>
 							</header>
 							<p>My work managing, experimenting with, and developing algorithms for an online cooperative politics sim.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="hotf.html" class="button">More</a></li>
 							</ul>
 						</article>
 						<article class="item">
