--- a/templated/hotf.html
+++ b/templated/hotf.html
@@ -20,6 +20,15 @@
 					<p>My personal assortment of random experiments and obscure interests</p>
 				</div>
 			</header>
+		<!-- Main -->
+					<section id="intro" class="main">
+						<span class="icon fa-code major"></span>
+						<h2>Hi There!</h2>
+						<p>I'm Jared, a Dallas high school student with a love for stage & film, games, and procedural generation.</p>
+						<ul class="actions">
+							<li><a href="#" class="button big">More About Me</a></li>
+						</ul>
+					</section>
       
       				<!-- Footer -->
 					<footer id="footer">
