--- a/templated/hotf.html
+++ b/templated/hotf.html
@@ -21,6 +21,7 @@
 				</div>
 			</header>
 		<!-- Main -->
+		<div id="wrapper">
 					<section id="intro" class="main">
 						<span class="icon fa-code major"></span>
 						<h2>Hi There!</h2>
