--- a/templated/hotf.html
+++ b/templated/hotf.html
@@ -23,7 +23,7 @@
 		<!-- Main -->
 		<div id="wrapper">
 					<section id="intro" class="main">
-						<span class="icon fa-globe major"></span>
+						<span class="icon fa-globe fa-spin"></span>
 						<h2>Hi There!</h2>
 						<p>I'm Jared, a Dallas high school student with a love for stage & film, games, and procedural generation.</p>
 						<ul class="actions">
